Setup Project Portofolio

--- a/index.html
+++ b/index.html
@@ -204,13 +204,13 @@
                     <div class="col-6">
                       <div class="info-item">
                         <span class="label">Age</span>
-                        <span class="value">28 Years</span>
+                        <span class="value">21 Years</span>
                       </div>
                     </div>
                     <div class="col-6">
                       <div class="info-item">
                         <span class="label">Email</span>
-                        <span class="value">fakhrur.rizal@example.com</span>
+                        <span class="value">fakhrurrizal10@gmail</span>
                       </div>
                     </div>
                     <div class="col-6">
