--- a/index.html
+++ b/index.html
@@ -465,8 +465,8 @@
                       data-aos-delay="200"
                     >
                       <div class="timeline-left">
-                        <h4 class="company">University of Technology</h4>
-                        <span class="period">2013-2017</span>
+                        <h4 class="company">University of Esa Unggul</h4>
+                        <span class="period">2023</span>
                       </div>
                       <div class="timeline-dot"></div>
                       <div class="timeline-right">
