--- a/index.html
+++ b/index.html
@@ -56,27 +56,24 @@
             <li><a href="#services">Services</a></li>
             <li class="dropdown">
               <a href="#"
-                ><span>Dropdown</span>
+                ><span>Projects</span>
                 <i class="bi bi-chevron-down toggle-dropdown"></i
               ></a>
               <ul>
-                <li><a href="#">Dropdown 1</a></li>
+                <li><a href="#portfolio">Web Applications</a></li>
                 <li class="dropdown">
                   <a href="#"
-                    ><span>Deep Dropdown</span>
+                    ><span>Mobile Apps</span>
                     <i class="bi bi-chevron-down toggle-dropdown"></i
                   ></a>
                   <ul>
-                    <li><a href="#">Deep Dropdown 1</a></li>
-                    <li><a href="#">Deep Dropdown 2</a></li>
-                    <li><a href="#">Deep Dropdown 3</a></li>
-                    <li><a href="#">Deep Dropdown 4</a></li>
-                    <li><a href="#">Deep Dropdown 5</a></li>
+                    <li><a href="#portfolio">Fitness Tracker App</a></li>
+                    <li><a href="#portfolio">E-commerce Mobile</a></li>
+                    <li><a href="#portfolio">Social Media App</a></li>
                   </ul>
                 </li>
-                <li><a href="#">Dropdown 2</a></li>
-                <li><a href="#">Dropdown 3</a></li>
-                <li><a href="#">Dropdown 4</a></li>
+                <li><a href="#portfolio">API Development</a></li>
+                <li><a href="#portfolio">System Architecture</a></li>
               </ul>
             </li>
             <li><a href="#contact">Contact</a></li>
@@ -1132,9 +1129,9 @@
             ><i class="bi bi-linkedin"></i
           ></a>
         </div>
-        <div class="credits">
+        <!-- <div class="credits">
           Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
-        </div>
+        </div> -->
       </div>
     </footer>
     <!-- Scroll Top -->
