Update Dropdown navbar

--- a/index.html
+++ b/index.html
@@ -378,30 +378,12 @@
                       data-aos-delay="200"
                     >
                       <div class="timeline-left">
-                        <h4 class="company">TechNova Solutions</h4>
-                        <span class="period">Jun, 2021 - Current</span>
+                        <h4 class="company">PT. Nizom Berkah Informasi</h4>
+                        <span class="period">March, 2024 - Current</span>
                       </div>
                       <div class="timeline-dot"></div>
                       <div class="timeline-right">
                         <h3 class="position">Fullstack Developer</h3>
-                        <p class="description">
-                          Leading development of web applications using Next.js,
-                          TypeScript, and Golang with Postgres database
-                        </p>
-                      </div>
-                    </div>
-                    <div
-                      class="timeline-item"
-                      data-aos="fade-up"
-                      data-aos-delay="300"
-                    >
-                      <div class="timeline-left">
-                        <h4 class="company">CodeWave Tech</h4>
-                        <span class="period">2018 - 2021</span>
-                      </div>
-                      <div class="timeline-dot"></div>
-                      <div class="timeline-right">
-                        <h3 class="position">Software Engineer</h3>
                         <p class="description">
                           Developing enterprise-level applications and mobile
                           solutions
@@ -422,6 +404,25 @@
                             @mui/material and Tailwind
                           </li>
                         </ul>
+                      </div>
+                    </div>
+                    <div
+                      class="timeline-item"
+                      data-aos="fade-up"
+                      data-aos-delay="300"
+                    >
+                      <div class="timeline-left">
+                        <h4 class="company">PT. Metra Digital Media</h4>
+                        <span class="period">March,2023 - March, 2024</span>
+                      </div>
+                      <div class="timeline-dot"></div>
+                      <div class="timeline-right">
+                        <h3 class="position">Fullstack Developer</h3>
+                        <p class="description">
+                          Leading development of web applications using Next.js,
+                          TypeScript, and Golang with Postgres database
+                        </p>
+
                         <p></p>
                       </div>
                     </div>
@@ -431,16 +432,39 @@
                       data-aos-delay="400"
                     >
                       <div class="timeline-left">
-                        <h4 class="company">WebCraft Studio</h4>
-                        <span class="period">2015-2018</span>
+                        <h4 class="company">
+                          CAN Creative PT. Cipta Adi Nugraha - Semarang
+                        </h4>
+                        <span class="period">Feb 2020 - April 2020</span>
                       </div>
                       <div class="timeline-dot"></div>
                       <div class="timeline-right">
-                        <h3 class="position">Junior Developer</h3>
+                        <h3 class="position">
+                          Junior Frontend Web Developer (Intern)
+                        </h3>
                         <p class="description">
-                          Assisted in development of web applications and gained
-                          experience in fullstack technologies
+                          Gained hands-on experience in frontend web development
+                          and collaborated with the team to deliver client
+                          projects.
                         </p>
+                        <ul>
+                          <li>
+                            Assisted in building responsive web interfaces using
+                            HTML, CSS, and JavaScript.
+                          </li>
+                          <li>
+                            Worked on implementing UI components and ensuring
+                            cross-browser compatibility.
+                          </li>
+                          <li>
+                            Collaborated with senior developers to integrate
+                            frontend code with backend APIs.
+                          </li>
+                          <li>
+                            Participated in code reviews and contributed to
+                            improving code quality and maintainability.
+                          </li>
+                        </ul>
                       </div>
                     </div>
                   </div>
