Update Dropdown navbar

--- a/index.html
+++ b/index.html
@@ -378,7 +378,9 @@
                       data-aos-delay="200"
                     >
                       <div class="timeline-left">
-                        <h4 class="company">PT. Nizom Berkah Informasi</h4>
+                        <h4 class="company">
+                          PT. Nizom Berkah Informasi - West Jakarta
+                        </h4>
                         <span class="period">March, 2024 - Current</span>
                       </div>
                       <div class="timeline-dot"></div>
@@ -412,7 +414,9 @@
                       data-aos-delay="300"
                     >
                       <div class="timeline-left">
-                        <h4 class="company">PT. Metra Digital Media</h4>
+                        <h4 class="company">
+                          PT. Metra Digital Media - South Jakarta
+                        </h4>
                         <span class="period">March,2023 - March, 2024</span>
                       </div>
                       <div class="timeline-dot"></div>
@@ -487,7 +491,7 @@
                     >
                       <div class="timeline-left">
                         <h4 class="company">University of Esa Unggul</h4>
-                        <span class="period">2023</span>
+                        <span class="period">2023 - current</span>
                       </div>
                       <div class="timeline-dot"></div>
                       <div class="timeline-right">
@@ -496,6 +500,47 @@
                           Specialized in software engineering and web
                           development
                         </p>
+                      </div>
+                    </div>
+                    <div
+                      class="timeline-item"
+                      data-aos="fade-up"
+                      data-aos-delay="300"
+                    >
+                      <div class="timeline-left">
+                        <h4 class="company">PT Dumbways Indonesia</h4>
+                        <span class="period">Oct, 2022 - Dec, 2022</span>
+                      </div>
+                      <div class="timeline-dot"></div>
+                      <div class="timeline-right">
+                        <h3 class="position">Software Engineering Bootcamp</h3>
+                        <p class="description">
+                          Intensive training program focused on fullstack
+                          development, including technologies such as Next.js,
+                          TypeScript, Golang, Postgres, and Flutter.
+                        </p>
+                        <ul>
+                          <li>
+                            Developed hands-on projects using modern web
+                            technologies like Next.js, @mui/material, and
+                            Tailwind CSS.
+                          </li>
+                          <li>
+                            Built RESTful APIs and backend services using Golang
+                            and Postgres.
+                          </li>
+                          <li>
+                            Created cross-platform mobile applications with
+                            Flutter.
+                          </li>
+                          <li>
+                            Collaborated with a team to deliver real-world
+                            solutions and enhance problem-solving skills.
+                          </li>
+                           <li>
+                           Deployment
+                          </li>
+                        </ul>
                       </div>
                     </div>
                   </div>
