Update Dropdown navbar

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           href="index.html"
           class="logo d-flex align-items-center me-auto me-xl-0"
         >
-          <h1 class="sitename">Fakhrur Dev</h1>
+          <h1 class="sitename">Fakhrur Codes</h1>
         </a>
         <nav id="navmenu" class="navmenu">
           <ul>
@@ -537,8 +537,8 @@
                             Collaborated with a team to deliver real-world
                             solutions and enhance problem-solving skills.
                           </li>
-                           <li>
-                           Deployment
+                          <li>
+                            Deployment
                           </li>
                         </ul>
                       </div>
